trunk/Archive2/7b/f9455128423e16/output
main.cpp: In function 'int main()':
main.cpp:11:15: error: expected class-name before '(' token
     a->~STRING();
               ^
